****************************************************************************/
# Initialization
#****************************************************************************/
m6_define(PROJECT_NAME,  [CHOS])
m4_define(PROJECT_EMAIL, [chos@nersc.gov])
m4_define(PROJECT_TAR,   [chos])
m4_define(PROJECT_MAJOR, 0)
m4_define(PROJECT_MINOR, 10)
m4_define(PROJECT_MICRO, 0)

AC_INIT(chos/chos.c)

#AC_INIT(PROJECT_NAME, PROJECT_MAJOR.PROJECT_MINOR.PROJECT_MICRO,
#        PROJECT_EMAIL, PROJECT_TAR)

dnl AC_HEADER_DIRENT


#AC_CONFIG_SRCDIR(kernel/chos_lkm.c)
AC_CONFIG_AUX_DIR(config)

AM_INIT_AUTOMAKE(CHOS,0.11.2)

AM_CONFIG_HEADER(config.h)


#****************************************************************************/
# OS Check
#****************************************************************************/
AC_MSG_CHECKING([OS])
os=`uname -s`
AC_MSG_RESULT([$os])
if test ! "$os" = "Linux"
then
    AC_MSG_ERROR([this application will only work on Linux!])
fi

MKDIR="mkdir -p"                ; AC_SUBST(MKDIR)
SHLIBMODE=755                      ; AC_SUBST(SHLIBMODE)

AC_PROG_AWK
AC_PROG_CC
AC_HEADER_STDC

#AC_PROG_LIBTOOL
#AM_PROG_LIBTOOL

GCC_WARNINGS="-Wall -Wwrite-strings \
        -Wpointer-arith -Wcast-qual -Wcast-align \
        -Wstrict-prototypes -Wmissing-prototypes \
        -Wnested-externs -Winline -Wshadow"

if test "x$GCC" = "xyes"; then
	CC=gcc                          ; AC_SUBST(CC)
	OS_CFLAGS=
	LD_D="$CC -shared -Xlinker -x"
	WARNINGS="$GCC_WARNINGS"
	PIC="-fPIC"
	DYNTYPE=so
	LD=ld
	LD_L="$CC -shared $LDFLAGS"
	RANLIB=:
	STRIP=strip
	CC_STATIC="-Xlinker -export-dynamic"
else
  AC_MSG_ERROR([Things probably won't work with a non-gcc compiler!])
fi

AC_SUBST(DYNTYPE)
AC_SUBST(OS_CFLAGS)
AC_SUBST(WARNINGS)
AC_SUBST(PIC)
AC_SUBST(LD)
AC_SUBST(LD_D)
AC_SUBST(LD_L)
AC_SUBST(RANLIB)
AC_SUBST(STRIP)
AC_SUBST(CC_STATIC)


dnl Check for libraries

dnl packaging convenience
AC_ARG_ENABLE(fakeroot,
[  --enable-fakeroot=<path to packaging directory>], FAKEROOT=$enableval)
AC_SUBST(FAKEROOT)

AC_ARG_ENABLE(securedir,
[  --enable-securedir=<path to location of PAMs> [default \$libdir/security]],
        SECUREDIR=$enableval, SECUREDIR=$libdir/security)
AC_SUBST(SECUREDIR)

AC_OUTPUT(Makefile chos/Makefile Make.Rules conf/Makefile )
